--- a/index.html
+++ b/index.html
@@ -16,3 +16,12 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+<!-- option w/o bootstrap genernic create own button style -->
+
+<!--  <div class="container">
+        <button  onclick="change_colors()">Click Me</button>
+    </div> -->
+
+    <!-- also remove bootstrap from link at the the top -->
